@@ -4,246 +4,246 @@ import java.util.Optional;
 import java.util.OptionalInt;
 
 public class rs {
-   public static final akj<ear<?, ?>> a = rn.a("crimson_fungus");
-   public static final akj<ear<?, ?>> b = rn.a("crimson_fungus_planted");
-   public static final akj<ear<?, ?>> c = rn.a("warped_fungus");
-   public static final akj<ear<?, ?>> d = rn.a("warped_fungus_planted");
-   public static final akj<ear<?, ?>> e = rn.a("huge_brown_mushroom");
-   public static final akj<ear<?, ?>> f = rn.a("huge_red_mushroom");
-   public static final akj<ear<?, ?>> g = rn.a("oak");
-   public static final akj<ear<?, ?>> h = rn.a("dark_oak");
-   public static final akj<ear<?, ?>> i = rn.a("birch");
-   public static final akj<ear<?, ?>> j = rn.a("acacia");
-   public static final akj<ear<?, ?>> k = rn.a("spruce");
-   public static final akj<ear<?, ?>> l = rn.a("pine");
-   public static final akj<ear<?, ?>> m = rn.a("jungle_tree");
-   public static final akj<ear<?, ?>> n = rn.a("fancy_oak");
-   public static final akj<ear<?, ?>> o = rn.a("jungle_tree_no_vine");
-   public static final akj<ear<?, ?>> p = rn.a("mega_jungle_tree");
-   public static final akj<ear<?, ?>> q = rn.a("mega_spruce");
-   public static final akj<ear<?, ?>> r = rn.a("mega_pine");
-   public static final akj<ear<?, ?>> s = rn.a("super_birch_bees_0002");
-   public static final akj<ear<?, ?>> t = rn.a("super_birch_bees");
-   public static final akj<ear<?, ?>> u = rn.a("swamp_oak");
-   public static final akj<ear<?, ?>> v = rn.a("jungle_bush");
-   public static final akj<ear<?, ?>> w = rn.a("azalea_tree");
-   public static final akj<ear<?, ?>> x = rn.a("mangrove");
-   public static final akj<ear<?, ?>> y = rn.a("tall_mangrove");
-   public static final akj<ear<?, ?>> z = rn.a("cherry");
-   public static final akj<ear<?, ?>> A = rn.a("oak_bees_0002");
-   public static final akj<ear<?, ?>> B = rn.a("oak_bees_002");
-   public static final akj<ear<?, ?>> C = rn.a("oak_bees_005");
-   public static final akj<ear<?, ?>> D = rn.a("birch_bees_0002");
-   public static final akj<ear<?, ?>> E = rn.a("birch_bees_002");
-   public static final akj<ear<?, ?>> F = rn.a("birch_bees_005");
-   public static final akj<ear<?, ?>> G = rn.a("fancy_oak_bees_0002");
-   public static final akj<ear<?, ?>> H = rn.a("fancy_oak_bees_002");
-   public static final akj<ear<?, ?>> I = rn.a("fancy_oak_bees_005");
-   public static final akj<ear<?, ?>> J = rn.a("fancy_oak_bees");
-   public static final akj<ear<?, ?>> K = rn.a("cherry_bees_005");
+   public static final akj<eax<?, ?>> a = rn.a("crimson_fungus");
+   public static final akj<eax<?, ?>> b = rn.a("crimson_fungus_planted");
+   public static final akj<eax<?, ?>> c = rn.a("warped_fungus");
+   public static final akj<eax<?, ?>> d = rn.a("warped_fungus_planted");
+   public static final akj<eax<?, ?>> e = rn.a("huge_brown_mushroom");
+   public static final akj<eax<?, ?>> f = rn.a("huge_red_mushroom");
+   public static final akj<eax<?, ?>> g = rn.a("oak");
+   public static final akj<eax<?, ?>> h = rn.a("dark_oak");
+   public static final akj<eax<?, ?>> i = rn.a("birch");
+   public static final akj<eax<?, ?>> j = rn.a("acacia");
+   public static final akj<eax<?, ?>> k = rn.a("spruce");
+   public static final akj<eax<?, ?>> l = rn.a("pine");
+   public static final akj<eax<?, ?>> m = rn.a("jungle_tree");
+   public static final akj<eax<?, ?>> n = rn.a("fancy_oak");
+   public static final akj<eax<?, ?>> o = rn.a("jungle_tree_no_vine");
+   public static final akj<eax<?, ?>> p = rn.a("mega_jungle_tree");
+   public static final akj<eax<?, ?>> q = rn.a("mega_spruce");
+   public static final akj<eax<?, ?>> r = rn.a("mega_pine");
+   public static final akj<eax<?, ?>> s = rn.a("super_birch_bees_0002");
+   public static final akj<eax<?, ?>> t = rn.a("super_birch_bees");
+   public static final akj<eax<?, ?>> u = rn.a("swamp_oak");
+   public static final akj<eax<?, ?>> v = rn.a("jungle_bush");
+   public static final akj<eax<?, ?>> w = rn.a("azalea_tree");
+   public static final akj<eax<?, ?>> x = rn.a("mangrove");
+   public static final akj<eax<?, ?>> y = rn.a("tall_mangrove");
+   public static final akj<eax<?, ?>> z = rn.a("cherry");
+   public static final akj<eax<?, ?>> A = rn.a("oak_bees_0002");
+   public static final akj<eax<?, ?>> B = rn.a("oak_bees_002");
+   public static final akj<eax<?, ?>> C = rn.a("oak_bees_005");
+   public static final akj<eax<?, ?>> D = rn.a("birch_bees_0002");
+   public static final akj<eax<?, ?>> E = rn.a("birch_bees_002");
+   public static final akj<eax<?, ?>> F = rn.a("birch_bees_005");
+   public static final akj<eax<?, ?>> G = rn.a("fancy_oak_bees_0002");
+   public static final akj<eax<?, ?>> H = rn.a("fancy_oak_bees_002");
+   public static final akj<eax<?, ?>> I = rn.a("fancy_oak_bees_005");
+   public static final akj<eax<?, ?>> J = rn.a("fancy_oak_bees");
+   public static final akj<eax<?, ?>> K = rn.a("cherry_bees_005");
 
-   private static eee.a a(dff $$0, dff $$1, int $$2, int $$3, int $$4, int $$5) {
-      return new eee.a(efj.a($$0), new egl($$2, $$3, $$4), efj.a($$1), new eep(bpf.a($$5), bpf.a(0), 3), new eem(1, 0, 1));
+   private static eek.a a(dfh $$0, dfh $$1, int $$2, int $$3, int $$4, int $$5) {
+      return new eek.a(efp.a($$0), new egr($$2, $$3, $$4), efp.a($$1), new eev(bpi.a($$5), bpi.a(0), 3), new ees(1, 0, 1));
    }
 
-   private static eee.a a() {
-      return a(dfh.U, dfh.aE, 4, 2, 0, 2).a();
+   private static eek.a a() {
+      return a(dfj.U, dfj.aE, 4, 2, 0, 2).a();
    }
 
-   private static eee.a b() {
-      return a(dfh.W, dfh.aG, 5, 2, 0, 2).a();
+   private static eek.a b() {
+      return a(dfj.W, dfj.aG, 5, 2, 0, 2).a();
    }
 
-   private static eee.a c() {
-      return a(dfh.W, dfh.aG, 5, 2, 6, 2).a();
+   private static eek.a c() {
+      return a(dfj.W, dfj.aG, 5, 2, 6, 2).a();
    }
 
-   private static eee.a d() {
-      return a(dfh.X, dfh.aH, 4, 8, 0, 2);
+   private static eek.a d() {
+      return a(dfj.X, dfj.aH, 4, 8, 0, 2);
    }
 
-   private static eee.a e() {
-      return new eee.a(efj.a(dfh.U), new egh(3, 11, 0), efj.a(dfh.aE), new eet(bpf.a(2), bpf.a(4), 4), new eem(0, 0, 0, OptionalInt.of(4))).a();
+   private static eek.a e() {
+      return new eek.a(efp.a(dfj.U), new egn(3, 11, 0), efp.a(dfj.aE), new eez(bpi.a(2), bpi.a(4), 4), new ees(0, 0, 0, OptionalInt.of(4))).a();
    }
 
-   private static eee.a f() {
-      return new eee.a(
-            efj.a(dfh.Z),
-            new egf(7, 1, 0, new bpp(bon.<bpi>a().a(bpf.a(1), 1).a(bpf.a(2), 1).a(bpf.a(3), 1).a()), bpo.a(2, 4), bpo.a(-4, -3), bpo.a(-1, 0)),
-            efj.a(dfh.aJ),
-            new eer(bpf.a(4), bpf.a(0), bpf.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
-            new eem(1, 0, 2)
+   private static eek.a f() {
+      return new eek.a(
+            efp.a(dfj.Z),
+            new egl(7, 1, 0, new bps(boq.<bpl>a().a(bpi.a(1), 1).a(bpi.a(2), 1).a(bpi.a(3), 1).a()), bpr.a(2, 4), bpr.a(-4, -3), bpr.a(-1, 0)),
+            efp.a(dfj.aJ),
+            new eex(bpi.a(4), bpi.a(0), bpi.a(5), 0.25F, 0.5F, 0.16666667F, 0.33333334F),
+            new ees(1, 0, 2)
          )
          .a();
    }
 
-   public static void a(qm<ear<?, ?>> $$0) {
-      jk<dff> $$1 = $$0.a(lr.f);
-      dzg $$2 = dzg.a(
-         dfh.x,
-         dfh.y,
-         dfh.z,
-         dfh.A,
-         dfh.B,
-         dfh.C,
-         dfh.D,
-         dfh.E,
-         dfh.bR,
-         dfh.bS,
-         dfh.bT,
-         dfh.bU,
-         dfh.bV,
-         dfh.bW,
-         dfh.bX,
-         dfh.bY,
-         dfh.bZ,
-         dfh.ca,
-         dfh.cb,
-         dfh.cc,
-         dfh.cd,
-         dfh.ce,
-         dfh.cf,
-         dfh.cg,
-         dfh.cB,
-         dfh.dS,
-         dfh.fb,
-         dfh.fc,
-         dfh.fd,
-         dfh.fe,
-         dfh.fm,
-         dfh.fq,
-         dfh.fC,
-         dfh.gt,
-         dfh.gu,
-         dfh.ku,
-         dfh.kv,
-         dfh.kA,
-         dfh.kB,
-         dfh.kD,
-         dfh.oi,
-         dfh.oo,
-         dfh.ox,
-         dfh.oz,
-         dfh.oA,
-         dfh.oB,
-         dfh.oC,
-         dfh.sv,
-         dfh.sw,
-         dfh.sx,
-         dfh.sy,
-         dfh.sz,
-         dfh.sA,
-         dfh.sB,
-         dfh.sD,
-         dfh.sE,
-         dfh.sF
+   public static void a(qm<eax<?, ?>> $$0) {
+      jk<dfh> $$1 = $$0.a(lr.f);
+      dzm $$2 = dzm.a(
+         dfj.x,
+         dfj.y,
+         dfj.z,
+         dfj.A,
+         dfj.B,
+         dfj.C,
+         dfj.D,
+         dfj.E,
+         dfj.bR,
+         dfj.bS,
+         dfj.bT,
+         dfj.bU,
+         dfj.bV,
+         dfj.bW,
+         dfj.bX,
+         dfj.bY,
+         dfj.bZ,
+         dfj.ca,
+         dfj.cb,
+         dfj.cc,
+         dfj.cd,
+         dfj.ce,
+         dfj.cf,
+         dfj.cg,
+         dfj.cB,
+         dfj.dS,
+         dfj.fb,
+         dfj.fc,
+         dfj.fd,
+         dfj.fe,
+         dfj.fm,
+         dfj.fq,
+         dfj.fC,
+         dfj.gt,
+         dfj.gu,
+         dfj.ku,
+         dfj.kv,
+         dfj.kA,
+         dfj.kB,
+         dfj.kD,
+         dfj.oi,
+         dfj.oo,
+         dfj.ox,
+         dfj.oz,
+         dfj.oA,
+         dfj.oB,
+         dfj.oC,
+         dfj.sv,
+         dfj.sw,
+         dfj.sx,
+         dfj.sy,
+         dfj.sz,
+         dfj.sA,
+         dfj.sB,
+         dfj.sD,
+         dfj.sE,
+         dfj.sF
       );
-      rn.a($$0, a, ebe.U, new ebn(dfh.ow.o(), dfh.os.o(), dfh.kK.o(), dfh.oy.o(), $$2, false));
-      rn.a($$0, b, ebe.U, new ebn(dfh.ow.o(), dfh.os.o(), dfh.kK.o(), dfh.oy.o(), $$2, true));
-      rn.a($$0, c, ebe.U, new ebn(dfh.on.o(), dfh.oj.o(), dfh.op.o(), dfh.oy.o(), $$2, false));
-      rn.a($$0, d, ebe.U, new ebn(dfh.on.o(), dfh.oj.o(), dfh.op.o(), dfh.oy.o(), $$2, true));
+      rn.a($$0, a, ebk.U, new ebt(dfj.ow.o(), dfj.os.o(), dfj.kK.o(), dfj.oy.o(), $$2, false));
+      rn.a($$0, b, ebk.U, new ebt(dfj.ow.o(), dfj.os.o(), dfj.kK.o(), dfj.oy.o(), $$2, true));
+      rn.a($$0, c, ebk.U, new ebt(dfj.on.o(), dfj.oj.o(), dfj.op.o(), dfj.oy.o(), $$2, false));
+      rn.a($$0, d, ebk.U, new ebt(dfj.on.o(), dfj.oj.o(), dfj.op.o(), dfj.oy.o(), $$2, true));
       rn.a(
          $$0,
          e,
-         ebe.r,
-         new edk(
-            efj.a(dfh.eT.o().a(djc.f, Boolean.valueOf(true)).a(djc.g, Boolean.valueOf(false))),
-            efj.a(dfh.eV.o().a(djc.f, Boolean.valueOf(false)).a(djc.g, Boolean.valueOf(false))),
+         ebk.r,
+         new edq(
+            efp.a(dfj.eT.o().a(dje.f, Boolean.valueOf(true)).a(dje.g, Boolean.valueOf(false))),
+            efp.a(dfj.eV.o().a(dje.f, Boolean.valueOf(false)).a(dje.g, Boolean.valueOf(false))),
             3
          )
       );
       rn.a(
          $$0,
          f,
-         ebe.q,
-         new edk(efj.a(dfh.eU.o().a(djc.g, Boolean.valueOf(false))), efj.a(dfh.eV.o().a(djc.f, Boolean.valueOf(false)).a(djc.g, Boolean.valueOf(false))), 2)
+         ebk.q,
+         new edq(efp.a(dfj.eU.o().a(dje.g, Boolean.valueOf(false))), efp.a(dfj.eV.o().a(dje.f, Boolean.valueOf(false)).a(dje.g, Boolean.valueOf(false))), 2)
       );
-      efx $$3 = new efx(0.002F);
-      efx $$4 = new efx(0.01F);
-      efx $$5 = new efx(0.02F);
-      efx $$6 = new efx(0.05F);
-      efx $$7 = new efx(1.0F);
-      rn.a($$0, g, ebe.f, a().c());
+      egd $$3 = new egd(0.002F);
+      egd $$4 = new egd(0.01F);
+      egd $$5 = new egd(0.02F);
+      egd $$6 = new egd(0.05F);
+      egd $$7 = new egd(1.0F);
+      rn.a($$0, g, ebk.f, a().c());
       rn.a(
          $$0,
          h,
-         ebe.f,
-         new eee.a(efj.a(dfh.aa), new egg(6, 2, 1), efj.a(dfh.aK), new ees(bpf.a(0), bpf.a(0)), new eel(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
+         ebk.f,
+         new eek.a(efp.a(dfj.aa), new egm(6, 2, 1), efp.a(dfj.aK), new eey(bpi.a(0), bpi.a(0)), new eer(1, 1, 0, 1, 2, OptionalInt.empty())).a().c()
       );
-      rn.a($$0, i, ebe.f, b().c());
-      rn.a($$0, j, ebe.f, new eee.a(efj.a(dfh.Y), new egi(5, 2, 2), efj.a(dfh.aI), new eeo(bpf.a(2), bpf.a(0)), new eem(1, 0, 2)).a().c());
-      rn.a($$0, z, ebe.f, f().c());
-      rn.a($$0, K, ebe.f, f().a(List.of($$6)).c());
-      rn.a($$0, k, ebe.f, new eee.a(efj.a(dfh.V), new egl(5, 2, 1), efj.a(dfh.aF), new efa(bpo.a(2, 3), bpo.a(0, 2), bpo.a(1, 2)), new eem(2, 0, 2)).a().c());
-      rn.a($$0, l, ebe.f, new eee.a(efj.a(dfh.V), new egl(6, 4, 0), efj.a(dfh.aF), new eey(bpf.a(1), bpf.a(1), bpo.a(3, 4)), new eem(2, 0, 2)).a().c());
-      rn.a($$0, m, ebe.f, d().a(ImmutableList.of(new efy(0.2F), egc.b, new efz(0.25F))).a().c());
-      rn.a($$0, n, ebe.f, e().c());
-      rn.a($$0, o, ebe.f, d().a().c());
+      rn.a($$0, i, ebk.f, b().c());
+      rn.a($$0, j, ebk.f, new eek.a(efp.a(dfj.Y), new ego(5, 2, 2), efp.a(dfj.aI), new eeu(bpi.a(2), bpi.a(0)), new ees(1, 0, 2)).a().c());
+      rn.a($$0, z, ebk.f, f().c());
+      rn.a($$0, K, ebk.f, f().a(List.of($$6)).c());
+      rn.a($$0, k, ebk.f, new eek.a(efp.a(dfj.V), new egr(5, 2, 1), efp.a(dfj.aF), new efg(bpr.a(2, 3), bpr.a(0, 2), bpr.a(1, 2)), new ees(2, 0, 2)).a().c());
+      rn.a($$0, l, ebk.f, new eek.a(efp.a(dfj.V), new egr(6, 4, 0), efp.a(dfj.aF), new efe(bpi.a(1), bpi.a(1), bpr.a(3, 4)), new ees(2, 0, 2)).a().c());
+      rn.a($$0, m, ebk.f, d().a(ImmutableList.of(new ege(0.2F), egi.b, new egf(0.25F))).a().c());
+      rn.a($$0, n, ebk.f, e().c());
+      rn.a($$0, o, ebk.f, d().a().c());
       rn.a(
          $$0,
          p,
-         ebe.f,
-         new eee.a(efj.a(dfh.X), new egk(10, 2, 19), efj.a(dfh.aH), new eew(bpf.a(2), bpf.a(0), 2), new eem(1, 1, 2))
-            .a(ImmutableList.of(egc.b, new efz(0.25F)))
+         ebk.f,
+         new eek.a(efp.a(dfj.X), new egq(10, 2, 19), efp.a(dfj.aH), new efc(bpi.a(2), bpi.a(0), 2), new ees(1, 1, 2))
+            .a(ImmutableList.of(egi.b, new egf(0.25F)))
             .c()
       );
       rn.a(
          $$0,
          q,
-         ebe.f,
-         new eee.a(efj.a(dfh.V), new egj(13, 2, 14), efj.a(dfh.aF), new eex(bpf.a(0), bpf.a(0), bpo.a(13, 17)), new eem(1, 1, 2))
-            .a(ImmutableList.of(new efv(efj.a(dfh.l))))
+         ebk.f,
+         new eek.a(efp.a(dfj.V), new egp(13, 2, 14), efp.a(dfj.aF), new efd(bpi.a(0), bpi.a(0), bpr.a(13, 17)), new ees(1, 1, 2))
+            .a(ImmutableList.of(new egb(efp.a(dfj.l))))
             .c()
       );
       rn.a(
          $$0,
          r,
-         ebe.f,
-         new eee.a(efj.a(dfh.V), new egj(13, 2, 14), efj.a(dfh.aF), new eex(bpf.a(0), bpf.a(0), bpo.a(3, 7)), new eem(1, 1, 2))
-            .a(ImmutableList.of(new efv(efj.a(dfh.l))))
+         ebk.f,
+         new eek.a(efp.a(dfj.V), new egp(13, 2, 14), efp.a(dfj.aF), new efd(bpi.a(0), bpi.a(0), bpr.a(3, 7)), new ees(1, 1, 2))
+            .a(ImmutableList.of(new egb(efp.a(dfj.l))))
             .c()
       );
-      rn.a($$0, s, ebe.f, c().a(ImmutableList.of($$3)).c());
-      rn.a($$0, t, ebe.f, c().a(ImmutableList.of($$7)).c());
-      rn.a($$0, u, ebe.f, a(dfh.U, dfh.aE, 5, 3, 0, 3).a(ImmutableList.of(new efz(0.25F))).c());
-      rn.a($$0, v, ebe.f, new eee.a(efj.a(dfh.X), new egl(1, 0, 0), efj.a(dfh.aE), new eeq(bpf.a(2), bpf.a(1), 2), new eem(0, 0, 0)).c());
+      rn.a($$0, s, ebk.f, c().a(ImmutableList.of($$3)).c());
+      rn.a($$0, t, ebk.f, c().a(ImmutableList.of($$7)).c());
+      rn.a($$0, u, ebk.f, a(dfj.U, dfj.aE, 5, 3, 0, 3).a(ImmutableList.of(new egf(0.25F))).c());
+      rn.a($$0, v, ebk.f, new eek.a(efp.a(dfj.X), new egr(1, 0, 0), efp.a(dfj.aE), new eew(bpi.a(2), bpi.a(1), 2), new ees(0, 0, 0)).c());
       rn.a(
          $$0,
          w,
-         ebe.f,
-         new eee.a(
-               efj.a(dfh.U),
-               new ege(4, 2, 0, 3, bpo.a(1, 2)),
-               new eft(bon.<dsh>a().a(dfh.aM.o(), 3).a(dfh.aN.o(), 1)),
-               new eez(bpf.a(3), bpf.a(0), bpf.a(2), 50),
-               new eem(1, 0, 1)
+         ebk.f,
+         new eek.a(
+               efp.a(dfj.U),
+               new egk(4, 2, 0, 3, bpr.a(1, 2)),
+               new efz(boq.<dsk>a().a(dfj.aM.o(), 3).a(dfj.aN.o(), 1)),
+               new eff(bpi.a(3), bpi.a(0), bpi.a(2), 50),
+               new ees(1, 0, 1)
             )
-            .a(efj.a(dfh.sH))
+            .a(efp.a(dfj.sH))
             .b()
             .c()
       );
       rn.a(
          $$0,
          x,
-         ebe.f,
-         new eee.a(
-               efj.a(dfh.ab),
-               new ego(2, 1, 4, bpo.a(1, 4), 0.5F, bpo.a(0, 1), $$1.b(avu.cj)),
-               efj.a(dfh.aL),
-               new eez(bpf.a(3), bpf.a(0), bpf.a(2), 70),
+         ebk.f,
+         new eek.a(
+               efp.a(dfj.ab),
+               new egu(2, 1, 4, bpr.a(1, 4), 0.5F, bpr.a(0, 1), $$1.b(avw.cj)),
+               efp.a(dfj.aL),
+               new eff(bpi.a(3), bpi.a(0), bpi.a(2), 70),
                Optional.of(
-                  new eff(
-                     bpo.a(1, 3),
-                     efj.a(dfh.ac),
-                     Optional.of(new efd(efj.a(dfh.sA), 0.5F)),
-                     new efe($$1.b(avu.ck), jn.a(dff::s, dfh.sI, dfh.ad), efj.a(dfh.ad), 8, 15, 0.2F)
+                  new efl(
+                     bpr.a(1, 3),
+                     efp.a(dfj.ac),
+                     Optional.of(new efj(efp.a(dfj.sA), 0.5F)),
+                     new efk($$1.b(avw.ck), jn.a(dfh::s, dfj.sI, dfj.ad), efp.a(dfj.ad), 8, 15, 0.2F)
                   )
                ),
-               new eem(2, 0, 2)
+               new ees(2, 0, 2)
             )
             .a(
                List.of(
-                  new efz(0.125F), new efw(0.14F, 1, 0, new efp(efj.a(dfh.E.o().a(dka.d, Boolean.valueOf(true))), dka.b, bpo.a(0, 4)), 2, List.of(jf.a)), $$4
+                  new egf(0.125F), new egc(0.14F, 1, 0, new efv(efp.a(dfj.E.o().a(dkc.d, Boolean.valueOf(true))), dkc.b, bpr.a(0, 4)), 2, List.of(jf.a)), $$4
                )
             )
             .a()
@@ -252,39 +252,39 @@ public class rs {
       rn.a(
          $$0,
          y,
-         ebe.f,
-         new eee.a(
-               efj.a(dfh.ab),
-               new ego(4, 1, 9, bpo.a(1, 6), 0.5F, bpo.a(0, 1), $$1.b(avu.cj)),
-               efj.a(dfh.aL),
-               new eez(bpf.a(3), bpf.a(0), bpf.a(2), 70),
+         ebk.f,
+         new eek.a(
+               efp.a(dfj.ab),
+               new egu(4, 1, 9, bpr.a(1, 6), 0.5F, bpr.a(0, 1), $$1.b(avw.cj)),
+               efp.a(dfj.aL),
+               new eff(bpi.a(3), bpi.a(0), bpi.a(2), 70),
                Optional.of(
-                  new eff(
-                     bpo.a(3, 7),
-                     efj.a(dfh.ac),
-                     Optional.of(new efd(efj.a(dfh.sA), 0.5F)),
-                     new efe($$1.b(avu.ck), jn.a(dff::s, dfh.sI, dfh.ad), efj.a(dfh.ad), 8, 15, 0.2F)
+                  new efl(
+                     bpr.a(3, 7),
+                     efp.a(dfj.ac),
+                     Optional.of(new efj(efp.a(dfj.sA), 0.5F)),
+                     new efk($$1.b(avw.ck), jn.a(dfh::s, dfj.sI, dfj.ad), efp.a(dfj.ad), 8, 15, 0.2F)
                   )
                ),
-               new eem(3, 0, 2)
+               new ees(3, 0, 2)
             )
             .a(
                List.of(
-                  new efz(0.125F), new efw(0.14F, 1, 0, new efp(efj.a(dfh.E.o().a(dka.d, Boolean.valueOf(true))), dka.b, bpo.a(0, 4)), 2, List.of(jf.a)), $$4
+                  new egf(0.125F), new egc(0.14F, 1, 0, new efv(efp.a(dfj.E.o().a(dkc.d, Boolean.valueOf(true))), dkc.b, bpr.a(0, 4)), 2, List.of(jf.a)), $$4
                )
             )
             .a()
             .c()
       );
-      rn.a($$0, A, ebe.f, a().a(List.of($$3)).c());
-      rn.a($$0, B, ebe.f, a().a(List.of($$5)).c());
-      rn.a($$0, C, ebe.f, a().a(List.of($$6)).c());
-      rn.a($$0, D, ebe.f, b().a(List.of($$3)).c());
-      rn.a($$0, E, ebe.f, b().a(List.of($$5)).c());
-      rn.a($$0, F, ebe.f, b().a(List.of($$6)).c());
-      rn.a($$0, G, ebe.f, e().a(List.of($$3)).c());
-      rn.a($$0, H, ebe.f, e().a(List.of($$5)).c());
-      rn.a($$0, I, ebe.f, e().a(List.of($$6)).c());
-      rn.a($$0, J, ebe.f, e().a(List.of($$7)).c());
+      rn.a($$0, A, ebk.f, a().a(List.of($$3)).c());
+      rn.a($$0, B, ebk.f, a().a(List.of($$5)).c());
+      rn.a($$0, C, ebk.f, a().a(List.of($$6)).c());
+      rn.a($$0, D, ebk.f, b().a(List.of($$3)).c());
+      rn.a($$0, E, ebk.f, b().a(List.of($$5)).c());
+      rn.a($$0, F, ebk.f, b().a(List.of($$6)).c());
+      rn.a($$0, G, ebk.f, e().a(List.of($$3)).c());
+      rn.a($$0, H, ebk.f, e().a(List.of($$5)).c());
+      rn.a($$0, I, ebk.f, e().a(List.of($$6)).c());
+      rn.a($$0, J, ebk.f, e().a(List.of($$7)).c());
    }
 }
